bdr.BDR.scala.error
Compilation error:
BDR:4: error: not found: value char
  if (char getIndication()=='R'){
      ^BDR:8: error: not found: value char
  if (char getIndication()=='L'){
      ^BDR:12: error: not found: value char
  if (char getIndication()=='I'){
      ^BDR:17: error: not found: value char
  if (char getIndication()=='A'){
      ^